# aidev2025_t2

./: README.md  pyproject.toml  riba.txt
src/: cli.py  model.py
